; ModuleID = '/home/carl/AnghaBench/freebsd/usr.sbin/bluetooth/bthidcontrol/extr_hid.c_hid_dump.c'
source_filename = "/home/carl/AnghaBench/freebsd/usr.sbin/bluetooth/bthidcontrol/extr_hid.c_hid_dump.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.hid_device = type { i32 }

@FAILED = common dso_local global i32 0, align 4
@OK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32, i8**)* @hid_dump to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @hid_dump(i32* %0, i32 %1, i8** %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i8**, align 8
  %7 = alloca %struct.hid_device*, align 8
  %8 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store i32 %1, i32* %5, align 4
  store i8** %2, i8*** %6, align 8
  store %struct.hid_device* null, %struct.hid_device** %7, align 8
  %9 = load i32, i32* @FAILED, align 4
  store i32 %9, i32* %8, align 4
  %10 = call i64 (...) @read_config_file()
  %11 = icmp eq i64 %10, 0
  br i1 %11, label %12, label %24

12:                                               ; preds = %3
  %13 = load i32*, i32** %4, align 8
  %14 = call %struct.hid_device* @get_hid_device(i32* %13)
  store %struct.hid_device* %14, %struct.hid_device** %7, align 8
  %15 = icmp ne %struct.hid_device* %14, null
  br i1 %15, label %16, label %22

16:                                               ; preds = %12
  %17 = load %struct.hid_device*, %struct.hid_device** %7, align 8
  %18 = getelementptr inbounds %struct.hid_device, %struct.hid_device* %17, i32 0, i32 0
  %19 = load i32, i32* %18, align 4
  %20 = call i32 @hid_dump_descriptor(i32 %19)
  %21 = load i32, i32* @OK, align 4
  store i32 %21, i32* %8, align 4
  br label %22

22:                                               ; preds = %16, %12
  %23 = call i32 (...) @clean_config()
  br label %24

24:                                               ; preds = %22, %3
  %25 = load i32, i32* %8, align 4
  ret i32 %25
}

declare dso_local i64 @read_config_file(...) #1

declare dso_local %struct.hid_device* @get_hid_device(i32*) #1

declare dso_local i32 @hid_dump_descriptor(i32) #1

declare dso_local i32 @clean_config(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
